fixes z-index

--- a/src/App.scss
+++ b/src/App.scss
@@ -30,6 +30,10 @@
     text-decoration: none;
   }
 
+  &>nav {
+    z-index: 9999;
+  }
+
 
 
   main {
