--- a/src/custom.scss
+++ b/src/custom.scss
@@ -31,3 +31,7 @@ $link-decoration: none;
     outline: none;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
+
+.offcanvas {
+    z-index: 99999
+}
